<?xml version="1.0"?>
<package format="2">
  <name>gps_to_utm_pkg</name>
  <version>0.0.1</version>
  <description>GPS 정보를 UTM 좌표로 변환하는 ROS 노드를 포함하는 패키지입니다.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- 빌드 도구 및 의존성 -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- 실행 의존성 -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
